feat: refactor schema && add config/roster.json
